--- a/hall.html
+++ b/hall.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="carte-container">
-        <img src="Carte.PNG" alt="Carte interactive" usemap="#carte-cliquable">
+        <img src="https://res.cloudinary.com/ddaouadrk/image/upload/v1741831817/t%C3%A9l%C3%A9chargement_idfvz1.jpg" alt="Télécommande" width="200">
 
         <map name="carte-cliquable">
             <area shape="rect" coords="50,50,150,150" href="#" alt="Chambre 1" title="Chambre 1">
