--- a/hall.html
+++ b/hall.html
@@ -41,7 +41,7 @@
 <body>
     <div class="remote">
         <h2>Télécommande</h2>
-        <img src="remote-control.png" alt="Télécommande" width="200">
+        <img src="https://res.cloudinary.com/ddaouadrk/image/upload/v1741831817/t%C3%A9l%C3%A9chargement_idfvz1.jpg" alt="Télécommande" width="200">
         <button onclick="navigateTo('https://www.facebook.com/?locale=fr_FR')">Chambre 1</button>
         <button onclick="navigateTo('https://www.artsteps.com/view/room2')">Chambre 2</button>
         <button onclick="navigateTo('https://www.artsteps.com/view/room3')">Chambre 3</button>
