--- a/hall.html
+++ b/hall.html
@@ -3,96 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carte cliquable</title>
+    <title>Télécommande Artsteps</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f0f0f0;
+            background-color: #222;
+            color: white;
+            flex-direction: column;
         }
-
-        .carte-container {
-            position: relative;
+        .remote {
+            background: #333;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             text-align: center;
+            margin-bottom: 20px;
         }
-
+        button {
+            display: block;
+            width: 100px;
+            margin: 10px auto;
+            padding: 10px;
+            background: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+        button:hover {
+            background: #0056b3;
+        }
         .carte-container img {
             max-width: 100%;
             height: auto;
             border: 2px solid #ccc;
             border-radius: 10px;
-        }
-
-        area {
             cursor: pointer;
-            transition: opacity 0.3s ease;
-        }
-
-        area:hover {
-            opacity: 0.7;
         }
     </style>
 </head>
 <body>
+    <div class="carte-container">
+        <img src="https://res.cloudinary.com/ddaouadrk/image/upload/v1741831817/t%C3%A9l%C3%A9chargement_idfvz1.jpg" alt="Télécommande" width="200" onclick="navigateTo('https://www.artsteps.com/view/room1')">
+    </div>
+
     <div class="remote">
         <h2>Télécommande</h2>
-        <img src="https://res.cloudinary.com/ddaouadrk/image/upload/v1741831817/t%C3%A9l%C3%A9chargement_idfvz1.jpg" alt="Télécommande" width="200">
-        <button onclick="navigateTo('https://www.facebook.com/?locale=fr_FR')">Chambre 1</button>
+        <button onclick="navigateTo('https://www.artsteps.com/view/room1')">Chambre 1</button>
         <button onclick="navigateTo('https://www.artsteps.com/view/room2')">Chambre 2</button>
         <button onclick="navigateTo('https://www.artsteps.com/view/room3')">Chambre 3</button>
         <button onclick="navigateTo('https://www.artsteps.com/view/room4')">Chambre 4</button>
     </div>
+
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const zones = document.querySelectorAll('area');
-
-            zones.forEach(zone => {
-                zone.addEventListener('mouseover', () => {
-                    zone.style.opacity = '0.7';
-                });
-
-                zone.addEventListener('mouseout', () => {
-                    zone.style.opacity = '1';
-                });
-
-                zone.addEventListener('click', (e) => {
-                    e.preventDefault();
-
-                    const titre = zone.getAttribute('title');
-
-                    switch (titre) {
-                        case 'Chambre 1':
-                            alert("Vous pouvez naviguer à la Chambre 1.");
-                            window.location.href = "chambre1.html";
-                            break;
-                        case 'Chambre 2':
-                            alert("Vous pouvez naviguer à la Chambre 2.");
-                            window.location.href = "chambre2.html";
-                            break;
-                        case 'Chambre 3':
-                            alert("Vous pouvez naviguer à la Chambre 3.");
-                            window.location.href = "chambre3.html";
-                            break;
-                        case 'Chambre 4':
-                            alert("Vous pouvez naviguer à la Chambre 4.");
-                            window.location.href = "chambre4.html";
-                            break;
-                        case 'Chambre 5':
-                            alert("Vous pouvez naviguer à la Chambre 5.");
-                            window.location.href = "chambre5.html";
-                            break;
-                        default:
-                            alert("Action non définie pour cette zone.");
-                            break;
-                    }
-                });
-            });
-        });
+        function navigateTo(url) {
+            window.open(url, "_blank");
+        }
     </script>
 </body>
 </html>
