--- a/hall.html
+++ b/hall.html
@@ -54,7 +54,7 @@
 
     <div class="remote">
         <h2>Télécommande</h2>
-        <button onclick="navigateTo('https://www.artsteps.com/view/room1')">Chambre 1</button>
+        <button onclick="navigateTo('https://www.facebook.com/?locale=fr_FR')">Chambre 1</button>
         <button onclick="navigateTo('https://www.artsteps.com/view/room2')">Chambre 2</button>
         <button onclick="navigateTo('https://www.artsteps.com/view/room3')">Chambre 3</button>
         <button onclick="navigateTo('https://www.artsteps.com/view/room4')">Chambre 4</button>
