--- a/hall.html
+++ b/hall.html
@@ -11,48 +11,58 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #222;
-            color: white;
-            flex-direction: column;
+            background-color: #f0e68c;
         }
-        .card {
-            background: #333;
-            padding: 30px;
-            border-radius: 15px;
+        .remote-container {
+            position: relative;
+            width: 300px;
+            height: 300px;
+            background-color: #add8e6;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-            text-align: center;
-            max-width: 300px;
         }
-        .card h2 {
-            margin-bottom: 20px;
-            font-size: 1.5em;
-        }
-        button {
-            display: block;
-            width: 100%;
-            margin: 10px 0;
-            padding: 12px;
-            background: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 8px;
+        .button-container {
+            position: absolute;
+            width: 80px;
+            height: 40px;
+            background: linear-gradient(to bottom, #fdf5e6, #d2b48c);
+            border-radius: 5px;
+            border: 1px solid #8b5a2b;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             cursor: pointer;
-            font-size: 1em;
-            transition: background 0.3s;
+            font-weight: bold;
+            text-align: center;
+            color: black;
         }
-        button:hover {
-            background: #0056b3;
+        .button-container:hover {
+            background: #c7a17a;
+        }
+        .room-1 { top: 10%; left: 20%; transform: rotate(-25deg); }
+        .room-2 { top: 10%; right: 20%; transform: rotate(25deg); }
+        .room-3 { bottom: 10%; right: 20%; transform: rotate(-25deg); }
+        .room-4 { bottom: 10%; left: 20%; transform: rotate(25deg); }
+        .room-5 {
+            width: 60px;
+            height: 30px;
+            background: linear-gradient(to bottom, #ffffff, #a9a9a9);
+            border-radius: 5px;
+            top: 50%; left: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
 <body>
-    <div class="card">
-        <h2>Télécommande</h2>
-        <button onclick="navigateTo('https://www.facebook.com/?locale=fr_FR')">Chambre 1</button>
-        <button onclick="navigateTo('https://www.artsteps.com/view/room2')">Chambre 2</button>
-        <button onclick="navigateTo('https://www.artsteps.com/view/room3')">Chambre 3</button>
-        <button onclick="navigateTo('https://www.artsteps.com/view/room4')">Chambre 4</button>
-        <button onclick="navigateTo('https://www.artsteps.com/view/room5')">Chambre 5</button>
+    <div class="remote-container">
+        <div class="button-container room-1" onclick="navigateTo('https://www.facebook.com/?locale=fr_FR')">1</div>
+        <div class="button-container room-2" onclick="navigateTo('https://www.artsteps.com/view/room2')">2</div>
+        <div class="button-container room-3" onclick="navigateTo('https://www.artsteps.com/view/room3')">3</div>
+        <div class="button-container room-4" onclick="navigateTo('https://www.artsteps.com/view/room4')">4</div>
+        <div class="button-container room-5" onclick="navigateTo('https://www.artsteps.com/view/room5')">5</div>
     </div>
 
     <script>
