--- a/hall.html
+++ b/hall.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Télécommande Artsteps</title>
+    <title>Naviguer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,6 +60,11 @@
             transform: translate(-50%, -50%);
             box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3);
         }
+        .room-6 {
+    top: 50%; 
+    left: 18%; 
+    transform: translateY(-50%) rotate(0deg); /* Ajustez la rotation si besoin */
+}
     </style>
 </head>
 <body>
