--- a/hall.html
+++ b/hall.html
@@ -61,10 +61,10 @@
             box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3);
         }
         .room-6 {
-    top: 50%; 
-    left: 18%; 
-    transform: translateY(-50%) rotate(0deg); /* Ajustez la rotation si besoin */
-}
+            top: 50%; 
+            left: 18%; 
+            transform: translateY(-50%) rotate(0deg);
+        }
     </style>
 </head>
 <body>
@@ -74,7 +74,7 @@
         <div class="button-container room-3" onclick="navigateTo('https://drive.google.com/drive/folders/1u5F8OUVi3wkDSu_PDEg-1xzFRslcFlvN?fbclid=IwY2xjawJxCvZleHRuA2FlbQIxMAABHkSFl6IPPkui0hEW7lxCvX_LicbokYfXrnKonSmeLFw60wId8DeRmwGX68gx_aem_4JPERfBXSzX3-fUKpvOYEg')">3</div>
         <div class="button-container room-4" onclick="navigateTo('https://drive.google.com/drive/folders/125bkonMLMORfjoDV5HiSza0dFP_uIa4o?fbclid=IwY2xjawJxCvZleHRuA2FlbQIxMAABHkSFl6IPPkui0hEW7lxCvX_LicbokYfXrnKonSmeLFw60wId8DeRmwGX68gx_aem_4JPERfBXSzX3-fUKpvOYEg')">4</div>
         <div class="button-container room-5" onclick="navigateTo('https://drive.google.com/drive/folders/1VM_CeYz428P6lLbnPEY65IWOkB6ZCDjt?fbclid=IwY2xjawJxCvZleHRuA2FlbQIxMAABHkSFl6IPPkui0hEW7lxCvX_LicbokYfXrnKonSmeLFw60wId8DeRmwGX68gx_aem_4JPERfBXSzX3-fUKpvOYEg')">5</div>
-        <div class="button-container room-5" onclick="navigateTo('https://drive.google.com/drive/folders/1L9Z4l1sbjupE3GgNTNjzP8-0UJhx1tYF?fbclid=IwY2xjawJxCvZleHRuA2FlbQIxMAABHkSFl6IPPkui0hEW7lxCvX_LicbokYfXrnKonSmeLFw60wId8DeRmwGX68gx_aem_4JPERfBXSzX3-fUKpvOYEg')">6</div>
+        <div class="button-container room-6" onclick="navigateTo('https://drive.google.com/drive/folders/1L9Z4l1sbjupE3GgNTNjzP8-0UJhx1tYF?fbclid=IwY2xjawJxCvZleHRuA2FlbQIxMAABHkSFl6IPPkui0hEW7lxCvX_LicbokYfXrnKonSmeLFw60wId8DeRmwGX68gx_aem_4JPERfBXSzX3-fUKpvOYEg')">6</div>
     </div>
 
     <script>
